# cmakestaticsrepro

./: CMakeLists.txt  README.md  binding.cpp  index.js  package-lock.json  package.json
